tests/typing/errors/scope_escape_in_wildcard/scope_ret.zf

goal forall f.
  (fun (a: type) (x: a). f 1 = x) _ 5.
